--- a/lpoficial.html
+++ b/lpoficial.html
@@ -2,6 +2,31 @@
 <html lang="pt-br">
 <head>
 
+	
+	
+	<!---???????????? INICIO UTM  ????????????---> <script>
+    let prefix = ["https://payment.hotmart.com", "https://pay.hotmart.com", "https://checkout.abmex.com.br"];
+
+function getParams() {
+    let t = "",
+        e = window.top.location.href,
+        r = new URL(e);
+    if (null != r) {
+        let a = r.searchParams.get("utm_source"),
+            n = r.searchParams.get("utm_medium"),
+            o = r.searchParams.get("utm_campaign"),
+            m = r.searchParams.get("utm_term"),
+            c = r.searchParams.get("utm_content"); - 1 !== e.indexOf("?") && (t = `&sck=${a}|${c}`), console.log(t)
+    }
+    return t
+}! function() {
+    var t = new URLSearchParams(window.location.search);
+    t.toString() && document.querySelectorAll("a").forEach(function(e) {
+        for (let r = 0; r < prefix.length; r++) - 1 !== e.href.indexOf(prefix[r]) && (-1 === e.href.indexOf("?") ? e.href += "?" + t.toString() + getParams() : e.href += "&" + t.toString() + getParams())
+    })
+}();
+</script><!---???????????? FINAL UTM + ANALYTICS HOTMART ????????????--->
+	
 
 
     <!-----VELOCIDADE VTURB------>
