--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function getParams() {
 
 <!---⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊ HEADLINE ⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊⇊--->
 
-<div style="margin-top: 20px;"><img class="img-fluid" src="head.png" />&nbsp; <!---⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈ VERIFIQUE O SOM  ⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈--->
+<div style="margin-top: 20px;"><img class="img-fluid" src="" />&nbsp; <!---⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈ VERIFIQUE O SOM  ⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈⇈--->
 
 
 
